[project]
name = "stepik-dl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

[tool.poetry]
name = "stepik-dl"
version = "0.0.0"
description = ""
authors = ["Alexander Koval <alexander.koval.88@gmail.com>"]
readme = "README.md"
packages = [{include = "stepik-dl"}]

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.12.3"
selenium = "^4.27.1"
pypandoc = "^1.15"
ruff = "^0.6.9"
ipython = "^8.28.0"
poetry-core = "^1.9.0"
poetry-plugin-export = "^1.8.0"
black = "^24.10.0"
webdriver-manager = "^4.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
# Add "Q" to the list of enabled codes.
select = ["E4", "E7", "E9", "F", "Q"]
# 2. Avoid enforcing line-length violations (`E501`)
ignore = ["E501", "F401"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"